.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glfstmplt6__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_glfstmplt6</customHelpPage>
    <description>glfstmplt6__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glfstmplt6_cmpno__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c 
&amp; &apos;_&apos; &amp; rstkf__glfstmplt6_label__c 
&amp; &apos;_&apos; &amp; TEXT(rstkf__glfstmplt6_fromyear__r.rstkf__glyear_year__c) 
&amp; &apos;_&apos; &amp; TEXT(rstkf__glfstmplt6_fromperiod__c) 
&amp; &apos;_&apos; &amp; TEXT(rstkf__glfstmplt6_thruyear__r.rstkf__glyear_year__c)
&amp; &apos;_&apos; &amp; TEXT(rstkf__glfstmplt6_thruperiod__c)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glfstmplt6_label__c &amp; &apos;-Effective&apos; &amp; rstkf__glfstmplt6_fromyear__r.Name &amp; &apos;/&apos; &amp;  TEXT( rstkf__glfstmplt6_fromperiod__c )</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt6_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Financial Company for which this record applies</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipName>glfstmplt6s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt6_currencyval__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt6_fromperiod__c</fullName>
        <inlineHelpText>The first Period within the starting Fiscal Year range that this data will cover</inlineHelpText>
        <label>Start of Effective Period Range</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt6_fromyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The first Fiscal Year for the range that this data will cover</inlineHelpText>
        <label>Start of Effective Year Range</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipName>glfstmplt6s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt6_generalval__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non-Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt6_label__c</fullName>
        <inlineHelpText>In &apos;New&apos; mode, select label from dropdown, if no label exists in dropdown then create user-defined by clicking Add External Data Label button, up to 50 characters in length. When using &apos;Existing&apos;, select desired External Data label  from dropdown.</inlineHelpText>
        <label>External Data Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt6_labelopt__c</fullName>
        <inlineHelpText>Choose &apos;New&apos; to create new records; choose &apos;Existing&apos; to view, edit or delete existing records</inlineHelpText>
        <label>Select Label Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt6_scale__c</fullName>
        <label>Scale of Decimal Precision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                    <default>true</default>
                    <label>Currency</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt6_thruperiod__c</fullName>
        <inlineHelpText>The last Period within the ending Fiscal Year range that this data will cover</inlineHelpText>
        <label>End of Effective Period Range</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt6_thruyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The last Fiscal Year for the range that this data will cover.  Start Effective Year and End Effective Year may be the same.</inlineHelpText>
        <label>End of Effective Year Range</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipName>glfstmplt6s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>External Data for Financial Reports</label>
    <listViews>
        <fullName>rstkf__RS_Extrernal_Data_for_Financial_Statements</fullName>
        <columns>NAME</columns>
        <columns>rstkf__externalid__c</columns>
        <columns>rstkf__glfstmplt6_cmpno__c</columns>
        <columns>rstkf__glfstmplt6_fromyear__c</columns>
        <columns>rstkf__glfstmplt6_fromperiod__c</columns>
        <columns>rstkf__glfstmplt6_thruyear__c</columns>
        <columns>rstkf__glfstmplt6_thruperiod__c</columns>
        <columns>rstkf__glfstmplt6_currencyval__c</columns>
        <columns>rstkf__glfstmplt6_generalval__c</columns>
        <columns>rstkf__glfstmplt6_scale__c</columns>
        <columns>rstkf__glfstmplt6_labelopt__c</columns>
        <columns>rstkf__glfstmplt6_label__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Extrernal Data for Financial Statements</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Data for Financial Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__reportingcompanyisrequiredandnotmodified</fullName>
        <active>true</active>
        <description>Reporting company is required and cannot be modified.</description>
        <errorConditionFormula>ISBLANK(rstkf__glfstmplt6_cmpno__c) 
|| (!ISNEW() &amp;&amp; ISCHANGED(rstkf__glfstmplt6_cmpno__c))</errorConditionFormula>
        <errorMessage>Reporting company is required and cannot be modified.</errorMessage>
    </validationRules>
</CustomObject>